@@ -1,5 +1,12 @@
 2008-10-30  Mike Krüger  <mkrueger@novell.com>
 
+	* Project/Src/Parser/CSharp/cs.ATG:
+	* Project/Src/Parser/CSharp/Parser.cs:
+	* Project/Src/Parser/CSharp/CSharpParser.cs: Changed the grammar
+	slightly.
+
+2008-10-30  Mike Krüger  <mkrueger@novell.com>
+
 	* Project/Src/Parser/IParser.cs:
 	* Project/Src/Parser/AbstractParser.cs:
 	* Project/Src/Parser/VBNet/VBNetParser.cs:
